--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/node": "^20",
